--- a/templates/jboss-set-404.html.j2
+++ b/templates/jboss-set-404.html.j2
@@ -143,7 +143,7 @@
             <center>
             <table style="list-style-type: none;" align: "center">
               <tr><th>URL</th><th>Path</th><th>Source URL</th>
-              <tr><td><a href="http://{{ ansible_nodename }}{{ jboss_set_shared_maven_repo.name }}">{{ jboss_set_shared_maven_repo.name }}</a></td><td>{{ jboss_set_shared_maven_repo.name }}</td><td align="left"><a href="/{{ jboss_set_shared_maven_repo.name }}">{{ jboss_set_shared_maven_repo.name }}</a></td></tr>
+              <tr><td><a href="http://{{ ansible_nodename }}/{{ jboss_set_shared_maven_repo.name }}">{{ jboss_set_shared_maven_repo.name }}</a></td><td>{{ jboss_set_shared_maven_repo.name }}</td><td align="left"><a href="/{{ jboss_set_shared_maven_repo.name }}/">{{ jboss_set_shared_maven_repo.name }}</a></td></tr>
             </table>
             </center>
 
