--- a/templates/jboss-set-404.html.j2
+++ b/templates/jboss-set-404.html.j2
@@ -107,9 +107,9 @@
  		    </a>
 		  </td>
 		  <td>
-			<a href="https://{{ ansible_nodename }}/mjolnir/">
-			  <img alt="mjolnir" src="./img/mjolnir-logo.png"/>
-            </a>
+		    <a href="https://mjolnir.corp.redhat.com/">
+		     <img alt="mjolnir" src="./img/mjolnir-logo.png"/>
+                   </a>
 		  </td>
 		  <td>
 		    <a href="https://{{ ansible_nodename }}/prbz-overview/">
